// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     expenses totalling 
    $107.90
  </h2>
</div>
`;

exports[`should render ExpensesSummary correctly with no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     expenses totalling 
    $0.00
  </h2>
</div>
`;
